  objects) and "Trusted Prefix" DNA dictionaries (a particular case of
  "Trusted Band" DNA dictionaries, represented by TBdna_PDict objects).
  See ?matchPDict for the details (especially the current limitations).

o Added basic support for palindrome finding: it can be achieved with the
  new findPalindromes() and findComplementedPalindromes() functions.
  Also added related utility functions palindromeArmLength(),
  palindromeLeftArm(), palindromeRightArm(), complementedPalindromeArmLength(),
  complementedPalindromeLeftArm() and complementedPalindromeRightArm().

o Added basic support for Position Weight Matrix matching thru the new
  matchPWM() and countPWM() functions. Also added related utility functions
  maxWeights(), maxScore() and PWMscore().

o Added "matchLRPatterns" and "matchProbePair" methods for XStringViews
  objects.

o Added the isMatching() function.

o Change in terminology to align with established practices: "fuzzy matching"
  is now called "inexact matching". This change mostly affects the
  documentation. The only place where it also affects the API is that now
  'algo="naive-inexact"' must be used instead of 'algo="naive-fuzzy"' when
  calling the matchPattern() function or any other function that has the 'algo'
  argument.

o Renamed the 'mismatch' arg -> 'max.mismatch' for the matchPattern(),
  matchLRPatterns() and matchPDict() functions.

MISCELLANEOUS

o Renamed some files in inst/extdata/ to use the same extension (.fa) for all
  FASTA files.

o Renamed Exfiles/ folder as extdata/ and put back fastaEx in it (from
  Biostrings 1).

o Changed license from LGPL to Artistic-2.0


**************************************************
*              2.6 SERIES NEWS                   *
**************************************************

o Added the matchLRPatterns() function for finding in a sequence patterns
  that are defined by a left and a right part.
  See ?matchLRPatterns for the details.
