@@ -1,117 +1,74 @@
 ###
 
 debug_copy_seq <- function()
-{
     invisible(.Call("debug_copy_seq", PACKAGE="Biostrings"))
-}
 
 debug_utils <- function()
-{
     invisible(.Call("debug_utils", PACKAGE="Biostrings"))
-}
 
 debug_bufutils <- function()
-{
     invisible(.Call("debug_bufutils", PACKAGE="Biostrings"))
-}
 
 debug_IRanges_class <- function()
-{
     invisible(.Call("debug_IRanges_class", PACKAGE="Biostrings"))
-}
 
 debug_IRanges_utils <- function()
-{
     invisible(.Call("debug_IRanges_utils", PACKAGE="Biostrings"))
-}
 
 debug_SparseList_utils <- function()
-{
     invisible(.Call("debug_SparseList_utils", PACKAGE="Biostrings"))
-}
 
 debug_XRaw_class <- function()
-{
     invisible(.Call("debug_XRaw_class", PACKAGE="Biostrings"))
-}
 
 debug_XRaw_utils <- function()
-{
     invisible(.Call("debug_XRaw_utils", PACKAGE="Biostrings"))
-}
 
 debug_XInteger <- function()
-{
     invisible(.Call("debug_XInteger", PACKAGE="Biostrings"))
-}
 
 debug_XNumeric <- function()
-{
 	invisible(.Call("debug_XNumeric", PACKAGE="Biostrings"))
-}
 
 debug_XString_class <- function()
-{
     invisible(.Call("debug_XString_class", PACKAGE="Biostrings"))
-}
 
 debug_XStringSet_class <- function()
-{
     invisible(.Call("debug_XStringSet_class", PACKAGE="Biostrings"))
-}
 
 debug_seqs_to_seqs <- function()
-{
     invisible(.Call("debug_seqs_to_seqs", PACKAGE="Biostrings"))
-}
+
+debug_match_utils <- function()
+    invisible(.Call("debug_match_utils", PACKAGE="Biostrings"))
 
 debug_match_reporting <- function()
-{
     invisible(.Call("debug_match_reporting", PACKAGE="Biostrings"))
-}
-
-debug_match_pattern <- function()
-{
-    invisible(.Call("debug_match_pattern", PACKAGE="Biostrings"))
-}
 
 debug_match_pattern_boyermoore <- function()
-{
     invisible(.Call("debug_match_pattern_boyermoore", PACKAGE="Biostrings"))
-}
 
 debug_match_pattern_shiftor <- function()
-{
     invisible(.Call("debug_match_pattern_shiftor", PACKAGE="Biostrings"))
-}
 
-debug_find_palindromes <- function()
-{
-    invisible(.Call("debug_find_palindromes", PACKAGE="Biostrings"))
-}
+debug_match_pattern <- function()
+    invisible(.Call("debug_match_pattern", PACKAGE="Biostrings"))
 
 debug_match_BOC <- function()
-{
     invisible(.Call("debug_match_BOC", PACKAGE="Biostrings"))
-}
 
 debug_match_BOC2 <- function()
-{
     invisible(.Call("debug_match_BOC2", PACKAGE="Biostrings"))
-}
+
+debug_find_palindromes <- function()
+    invisible(.Call("debug_find_palindromes", PACKAGE="Biostrings"))
 
 debug_ACtree_utils <- function()
-{
     invisible(.Call("debug_ACtree_utils", PACKAGE="Biostrings"))
-}
 
 debug_MIndex_utils <- function()
-{
     invisible(.Call("debug_MIndex_utils", PACKAGE="Biostrings"))
-}
 
 debug_match_TBdna <- function()
-{
     invisible(.Call("debug_match_TBdna", PACKAGE="Biostrings"))
-}
 
